Add ZooKeeper and Kafka